--- a/pref.ini
+++ b/pref.ini
@@ -1,9 +1,9 @@
 [common]
 ;API mode, set to true to prevent loading local subscriptions or serving local files directly
-api_mode=false
+api_mode=true
 
 ;Access token used for performing critical action through Web interface
-api_access_token=password
+api_access_token=passwordqwpo
 
 ;Default URLs, used when no URL is provided in request, use "|" to separate multiple subscription links, supports local files/URL
 default_url=
@@ -127,7 +127,7 @@ write_managed_config=true
 
 ;Address prefix for MANAGED-CONFIG info, without the trailing "/".
 ;This address will also be used for generating /getruleset, /qx-rewrite, /qx-script addresses.
-managed_config_prefix=http://127.0.0.1:25500
+managed_config_prefix=https://suc.duohao.xyz
 
 ;Managed config update interval in seconds, determine how long the config will be updated.
 config_update_interval=86400
@@ -246,7 +246,7 @@ clash.log_level=info
 
 [server]
 ;Address to bind on for Web Server
-listen=0.0.0.0
+listen=127.0.0.1
 
 ;Port to bind on for Web Server
 port=25500
